--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,30 @@
   },
   "homepage": "https://github.com/CyberWalrus/Walrus-Personal-App#readme",
   "devDependencies": {
-    "tslint": "5.17.0"
+    "@babel/core": "7.4.5",
+    "@babel/preset-env": "7.4.5",
+    "@babel/preset-react": "7.0.0",
+    "@types/react": "16.8.20",
+    "@types/react-dom": "16.8.4",
+    "@types/react-redux": "7.1.0",
+    "@types/react-router-dom": "4.3.4",
+    "@types/redux": "3.6.0",
+    "@types/redux-thunk": "2.1.0",
+    "babel-loader": "8.0.6",
+    "ts-loader": "6.0.3",
+    "tslint": "5.17.0",
+    "typescript": "3.5.2",
+    "webpack": "4.34.0",
+    "webpack-cli": "3.3.4",
+    "webpack-dev-server": "3.7.2"
+  },
+  "dependencies": {
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-redux": "7.1.0",
+    "react-router-dom": "5.0.1",
+    "recompose": "0.30.0",
+    "redux": "4.0.1",
+    "redux-thunk": "2.3.0"
   }
 }
