--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tslint": "tslint -c tslint.json 'src/**/*.{ts,tsx}",
+    "test": "npm run tslint && jest"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,9 @@
     "@babel/core": "7.4.5",
     "@babel/preset-env": "7.4.5",
     "@babel/preset-react": "7.0.0",
+    "@types/enzyme": "3.9.3",
+    "@types/enzyme-adapter-react-16": "1.0.5",
+    "@types/jest": "24.0.15",
     "@types/react": "16.8.20",
     "@types/react-dom": "16.8.4",
     "@types/react-redux": "7.1.0",
@@ -28,8 +32,14 @@
     "@types/redux": "3.6.0",
     "@types/redux-thunk": "2.1.0",
     "babel-loader": "8.0.6",
+    "enzyme": "3.10.0",
+    "enzyme-adapter-react-16": "1.14.0",
+    "enzyme-to-json": "3.3.5",
+    "jest": "24.8.0",
+    "ts-jest": "24.0.2",
     "ts-loader": "6.0.3",
     "tslint": "5.17.0",
+    "tslint-react": "4.0.0",
     "typescript": "3.5.2",
     "webpack": "4.34.0",
     "webpack-cli": "3.3.4",
