--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,10 @@
     "jsx": "react",
     "allowSyntheticDefaultImports": false,
     "types": [
+      "jest",
       "node"
     ]
-  },
+  },  
+  "include": ["./src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
