--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@babel/preset-react": "7.0.0",
     "@types/enzyme": "3.9.3",
     "@types/enzyme-adapter-react-16": "1.0.5",
+    "@types/express": "4.17.0",
     "@types/jest": "24.0.15",
+    "@types/node": "12.0.8",
     "@types/react": "16.8.20",
     "@types/react-dom": "16.8.4",
     "@types/react-redux": "7.1.0",
