--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server",
     "tslint": "tslint -c tslint.json 'src/**/*.{ts,tsx}",
-    "test": "npm run tslint && jest"
+    "test": "npm run tslint && jest",
+    "dev": "ts-node-dev --respawn --transpileOnly ./server/server.ts"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "@types/react-router-dom": "4.3.4",
     "@types/redux": "3.6.0",
     "@types/redux-thunk": "2.1.0",
+    "awesome-typescript-loader": "5.2.1",
     "babel-loader": "8.0.6",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
@@ -40,6 +42,8 @@
     "jest": "24.8.0",
     "ts-jest": "24.0.2",
     "ts-loader": "6.0.3",
+    "ts-node": "8.3.0",
+    "ts-node-dev": "1.0.0-pre.40",
     "tslint": "5.17.0",
     "tslint-react": "4.0.0",
     "typescript": "3.5.2",
