--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@types/react-router-dom": "4.3.4",
     "@types/redux": "3.6.0",
     "@types/redux-thunk": "2.1.0",
+    "@types/webpack": "4.4.33",
+    "@types/webpack-dev-server": "3.1.6",
     "awesome-typescript-loader": "5.2.1",
     "babel-loader": "8.0.6",
     "enzyme": "3.10.0",
