--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "7.4.5",
     "@babel/preset-env": "7.4.5",
     "@babel/preset-react": "7.0.0",
+    "@types/connect-history-api-fallback": "1.3.2",
     "@types/enzyme": "3.9.3",
     "@types/enzyme-adapter-react-16": "1.0.5",
     "@types/express": "4.17.0",
@@ -35,9 +36,12 @@
     "@types/redux": "3.6.0",
     "@types/redux-thunk": "2.1.0",
     "@types/webpack": "4.4.33",
+    "@types/webpack-dev-middleware": "2.0.2",
     "@types/webpack-dev-server": "3.1.6",
+    "@types/webpack-hot-middleware": "2.16.5",
     "awesome-typescript-loader": "5.2.1",
     "babel-loader": "8.0.6",
+    "connect-history-api-fallback": "1.6.0",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
     "enzyme-to-json": "3.3.5",
@@ -51,7 +55,9 @@
     "typescript": "3.5.2",
     "webpack": "4.34.0",
     "webpack-cli": "3.3.4",
-    "webpack-dev-server": "3.7.2"
+    "webpack-dev-middleware": "3.7.0",
+    "webpack-dev-server": "3.7.2",
+    "webpack-hot-middleware": "2.25.0"
   },
   "dependencies": {
     "react": "16.8.6",
