--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "ts-node": "8.3.0",
     "ts-node-dev": "1.0.0-pre.40",
     "tsconfig-paths": "3.8.0",
+    "tsconfig-paths-jest": "0.0.1",
     "tslint": "5.17.0",
     "tslint-react": "4.0.0",
     "typescript": "3.5.2",
