--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/enzyme-adapter-react-16": "1.0.5",
     "@types/express": "4.17.0",
     "@types/jest": "24.0.15",
+    "@types/mongoose": "5.5.6",
     "@types/node": "12.0.8",
     "@types/react": "16.8.20",
     "@types/react-dom": "16.8.4",
@@ -52,12 +53,14 @@
     "extract-loader": "3.1.0",
     "file-loader": "4.0.0",
     "jest": "24.8.0",
+    "mongoose": "5.6.0",
     "node-sass": "4.12.0",
     "normalize-scss": "7.0.1",
     "postcss-loader": "3.0.0",
     "sass-loader": "7.1.0",
     "ts-jest": "24.0.2",
     "ts-loader": "6.0.3",
+    "ts-mongoose": "0.0.16",
     "ts-node": "8.3.0",
     "ts-node-dev": "1.0.0-pre.40",
     "tsconfig-paths": "3.8.0",
