--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "7.4.5",
     "@babel/preset-env": "7.4.5",
     "@babel/preset-react": "7.0.0",
+    "@types/bcrypt": "3.0.0",
     "@types/connect-history-api-fallback": "1.3.2",
     "@types/enzyme": "3.9.3",
     "@types/enzyme-adapter-react-16": "1.0.5",
@@ -44,6 +45,7 @@
     "autoprefixer": "9.6.0",
     "awesome-typescript-loader": "5.2.1",
     "babel-loader": "8.0.6",
+    "bcrypt": "3.0.6",
     "compass-mixins": "0.12.10",
     "connect-history-api-fallback": "1.6.0",
     "css-loader": "3.0.0",
