--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "7.4.5",
     "@babel/preset-env": "7.4.5",
     "@babel/preset-react": "7.0.0",
+    "@types/axios": "0.14.0",
     "@types/bcrypt": "3.0.0",
     "@types/connect-history-api-fallback": "1.3.2",
     "@types/enzyme": "3.9.3",
@@ -35,6 +36,7 @@
     "@types/react-dom": "16.8.4",
     "@types/react-redux": "7.1.0",
     "@types/react-router-dom": "4.3.4",
+    "@types/recompose": "0.30.6",
     "@types/redux": "3.6.0",
     "@types/redux-thunk": "2.1.0",
     "@types/webpack": "4.4.33",
@@ -59,6 +61,7 @@
     "node-sass": "4.12.0",
     "normalize-scss": "7.0.1",
     "postcss-loader": "3.0.0",
+    "redux-devtools-extension": "2.13.8",
     "sass-loader": "7.1.0",
     "ts-jest": "24.0.2",
     "ts-loader": "6.0.3",
@@ -78,6 +81,7 @@
     "webpack-merge": "4.2.1"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "7.1.0",
