--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,11 @@
     }
   },
   "include": ["./**/*.ts", "./**/*.tsx"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "**/fixtures",
+    "**/*.test.ts",
+    "**/*.test.tsx"
+  ]
 }
