--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "7.4.5",
     "@babel/preset-env": "7.4.5",
     "@babel/preset-react": "7.0.0",
+    "@types/array-move": "2.0.0",
     "@types/axios": "0.14.0",
     "@types/bcrypt": "3.0.0",
     "@types/connect-history-api-fallback": "1.3.2",
@@ -36,6 +37,7 @@
     "@types/react-dom": "16.8.4",
     "@types/react-redux": "7.1.0",
     "@types/react-router-dom": "4.3.4",
+    "@types/react-sortable-hoc": "0.6.5",
     "@types/recompose": "0.30.6",
     "@types/redux": "3.6.0",
     "@types/redux-thunk": "2.1.0",
@@ -81,11 +83,13 @@
     "webpack-merge": "4.2.1"
   },
   "dependencies": {
+    "array-move": "2.1.0",
     "axios": "^0.19.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "7.1.0",
     "react-router-dom": "5.0.1",
+    "react-sortable-hoc": "1.9.1",
     "recompose": "0.30.0",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0"
