--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/enzyme-adapter-react-16": "1.0.5",
     "@types/express": "4.17.0",
     "@types/jest": "24.0.15",
+    "@types/js-cookie": "2.2.2",
     "@types/mongoose": "5.5.6",
     "@types/node": "12.0.8",
     "@types/react": "16.8.20",
@@ -85,6 +86,7 @@
   "dependencies": {
     "array-move": "2.1.0",
     "axios": "^0.19.0",
+    "js-cookie": "2.2.0",
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-redux": "7.1.0",
