--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server",
+    "dev-client": "webpack-dev-server",
     "tslint": "tslint -c tslint.json 'client/**/*.{ts,tsx} & tslint -c tslint.json 'server/**/*.{ts,tsx}",
     "test": "npm run tslint && jest",
-    "dev": "ts-node-dev --respawn --transpileOnly -r tsconfig-paths/register ./server/server.ts"
+    "start": "ts-node-dev --respawn --transpileOnly -r tsconfig-paths/register ./server/server.ts"
   },
   "repository": {
     "type": "git",
