--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "rootDir": ".",
-    "outDir": "dist",
+    "outDir": "server_compiled",
     "sourceMap": true,
     "module": "commonjs",
     "target": "es2017",
