fix package and prod server

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "dev-client": "webpack-dev-server",
     "tslint": "tslint -c tslint.json 'client/**/*.{ts,tsx} & tslint -c tslint.json 'server/**/*.{ts,tsx}",
     "test": "npm run tslint && jest",
-    "start": "ts-node-dev --respawn --transpileOnly -r tsconfig-paths/register ./server/server.ts",    
+    "start": "ts-node-dev --respawn --transpileOnly -r tsconfig-paths/register ./server/server.ts",
     "build:client": "webpack --mode production",
     "build:server": "tsc -b tsconfig.json",
-    "start:prod": "node ./dist"
+    "start:prod": "npm run build:client && set NODE_ENV=production&& ts-node -r tsconfig-paths/register ./server/server.ts"
   },
   "repository": {
     "type": "git",
@@ -66,6 +66,7 @@
     "jest": "24.8.0",
     "mongoose": "5.6.0",
     "node-sass": "4.12.0",
+    "nodemon": "1.19.1",
     "normalize-scss": "7.0.1",
     "postcss-loader": "3.0.0",
     "redux-devtools-extension": "2.13.8",
