--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev-client": "webpack-dev-server",
     "tslint": "tslint -c tslint.json 'client/**/*.{ts,tsx} & tslint -c tslint.json 'server/**/*.{ts,tsx}",
     "test": "npm run tslint && jest",
+    "test:solo": "jest ./client/utils/array.test.ts",
     "start": "ts-node-dev --respawn --transpileOnly -r tsconfig-paths/register ./server/server.ts",
     "build:client": "webpack --mode production",
     "build:server": "tsc -b tsconfig.json",
@@ -35,6 +36,7 @@
     "@types/enzyme-adapter-react-16": "1.0.5",
     "@types/express": "4.17.0",
     "@types/jest": "24.0.15",
+    "@types/jest-cli": "23.6.0",
     "@types/js-cookie": "2.2.2",
     "@types/mongoose": "5.5.6",
     "@types/node": "12.0.8",
@@ -64,6 +66,7 @@
     "extract-loader": "3.1.0",
     "file-loader": "4.0.0",
     "jest": "24.8.0",
+    "jest-cli": "24.8.0",
     "mongoose": "5.6.0",
     "node-sass": "4.12.0",
     "normalize-scss": "7.0.1",
