--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf ./dist/css/* ./dist/js/* ./server_compiled/*",
-    "dev-client": "webpack-dev-server",
+    "dev:client": "webpack-dev-server",
     "tslint": "tslint -c tslint.json 'client/**/*.{ts,tsx} & tslint -c tslint.json 'server/**/*.{ts,tsx}",
     "test": "npm run tslint && jest",
     "test:solo": "jest ./client/utils/array/array.test.ts",
