--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "tslint": "tslint -c tslint.json 'client/**/*.{ts,tsx} & tslint -c tslint.json 'server/**/*.{ts,tsx}",
     "test": "npm run tslint && jest",
     "test:solo": "jest ./client/utils/array/array.test.ts",
-    "start": "ts-node-dev --respawn --transpileOnly -r tsconfig-paths/register ./server/server.ts",
+    "start:dev": "ts-node-dev --respawn --transpileOnly -r tsconfig-paths/register ./server/server.ts",
     "build:client": "webpack --mode production",
     "build:server": "tsc -b tsconfig.json",
-    "start:prod": "npm run build:client && set NODE_ENV=production&& ts-node -r tsconfig-paths/register ./server/server.ts"
+    "start": "npm run build:client && set NODE_ENV=production&& ts-node -r tsconfig-paths/register ./server/server.ts"
   },
   "repository": {
     "type": "git",
