--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "url": "https://github.com/CyberWalrus/walrus-personal-app/issues"
   },
   "homepage": "https://github.com/CyberWalrus/walrus-personal-app#readme",
-  "devDependencies": {
+
+"dependencies": {
     "@babel/core": "7.4.5",
     "@babel/preset-env": "7.4.5",
     "@babel/preset-react": "7.0.0",
@@ -88,9 +89,7 @@
     "webpack-dev-middleware": "3.7.0",
     "webpack-dev-server": "3.7.2",
     "webpack-hot-middleware": "2.25.0",
-    "webpack-merge": "4.2.1"
-  },
-  "dependencies": {
+    "webpack-merge": "4.2.1",
     "array-move": "2.1.0",
     "axios": "^0.19.0",
     "js-cookie": "2.2.0",
