--- a/package.json
+++ b/package.json
@@ -53,13 +53,16 @@
     "@types/webpack-dev-server": "3.1.6",
     "@types/webpack-hot-middleware": "2.16.5",
     "@types/webpack-merge": "4.1.5",
+    "array-move": "2.1.0",
     "autoprefixer": "9.6.0",
     "awesome-typescript-loader": "5.2.1",
+    "axios": "^0.19.0",
     "babel-loader": "8.0.6",
     "bcrypt": "3.0.6",
     "compass-mixins": "0.12.10",
     "connect-history-api-fallback": "1.6.0",
     "css-loader": "3.0.0",
+    "cssnano": "4.1.10",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
     "enzyme-to-json": "3.3.5",
@@ -67,11 +70,20 @@
     "file-loader": "4.0.0",
     "jest": "24.8.0",
     "jest-cli": "24.8.0",
+    "js-cookie": "2.2.0",
     "mongoose": "5.6.0",
     "node-sass": "4.12.0",
     "normalize-scss": "7.0.1",
     "postcss-loader": "3.0.0",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-redux": "7.1.0",
+    "react-router-dom": "5.0.1",
+    "react-sortable-hoc": "1.9.1",
+    "recompose": "0.30.0",
+    "redux": "4.0.1",
     "redux-devtools-extension": "2.13.8",
+    "redux-thunk": "2.3.0",
     "sass-loader": "7.1.0",
     "ts-jest": "24.0.2",
     "ts-loader": "6.0.3",
@@ -88,17 +100,6 @@
     "webpack-dev-middleware": "3.7.0",
     "webpack-dev-server": "3.7.2",
     "webpack-hot-middleware": "2.25.0",
-    "webpack-merge": "4.2.1",
-    "array-move": "2.1.0",
-    "axios": "^0.19.0",
-    "js-cookie": "2.2.0",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-redux": "7.1.0",
-    "react-router-dom": "5.0.1",
-    "react-sortable-hoc": "1.9.1",
-    "recompose": "0.30.0",
-    "redux": "4.0.1",
-    "redux-thunk": "2.3.0"
+    "webpack-merge": "4.2.1"
   }
 }
