--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
     "file-loader": "4.0.0",
     "jest": "24.8.0",
     "jest-cli": "24.8.0",
-    "js-cookie": "2.2.0",
     "mongoose": "5.6.0",
     "node-sass": "4.12.0",
     "normalize-scss": "7.0.1",
@@ -83,6 +82,7 @@
     "recompose": "0.30.0",
     "redux": "4.0.1",
     "redux-devtools-extension": "2.13.8",
+    "redux-persist": "5.10.0",
     "redux-thunk": "2.3.0",
     "sass-loader": "7.1.0",
     "ts-jest": "24.0.2",
