--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "prettier.tslintIntegration": true
+    "prettier.tslintIntegration": true,
+    "cSpell.words": [
+        "middlewares",
+        "persistor",
+        "signup"
+    ]
 }
